load("@io_bazel_rules_docker//container:container.bzl", "container_image")

platform(
    name = "linux_amd_platform",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    exec_properties = { # put your own exec properties here
        "OSFamily": "Linux",
    },
)

container_image(
    name = "my_image",
    base = "@postgres//image",
    env = {
        "username" : "john"
    }
)